--- a/fonts/custom.css
+++ b/fonts/custom.css
@@ -1,7 +1,7 @@
 @font-face {
     font-family: 'asrieme';
-    src: url('fonts/icomoon.eot?h1a6bx');
-    src: url('fonts/icomoon.eot?h1a6bx#iefix') format('embedded-opentype'), url('fonts/icomoon.ttf?h1a6bx') format('truetype'), url('fonts/icomoon.woff?h1a6bx') format('woff'), url('fonts/icomoon.svg?h1a6bx#icomoon') format('svg');
+    src: url('icomoon/icomoon.eot?h1a6bx');
+    src: url('icomoon/icomoon.eot?h1a6bx#iefix') format('embedded-opentype'), url('icomoon/icomoon.ttf?h1a6bx') format('truetype'), url('icomoon/icomoon.woff?h1a6bx') format('woff'), url('icomoon/icomoon.svg?h1a6bx#icomoon') format('svg');
     font-weight: normal;
     font-style: normal;
     font-display: block;
