--- a/style/klassementen.css
+++ b/style/klassementen.css
@@ -1,4 +1,4 @@
-.klassement {
+.klassementen-container .klassement-card {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -6,33 +6,38 @@
     margin-bottom: 1vw;
 }
 
-.klassement .klassement-info {
+.klassementen-container .klassement-card .klassement-info {
     max-width: 350px;
 }
 
-.klassement .button-wrapper {
+.klassementen-container .klassement-card .button-wrapper {
     min-width: 120px;
     padding: 0.5vw;
     display: inline-block;
 }
 
-.klassement .button-wrapper>a {
+.klassementen-container .klassement-card .button-wrapper>a {
     color: #041d3d;
     letter-spacing: 0px;
     font-size: 16px;
-    background-color: #ffebb3;
+    text-decoration: none;
+    background-color: #ffc72b;
     border-radius: 100px;
     border-width: 0px;
     display: inline-block;
 }
 
-.klassement .button-wrapper .icon-wrapper {
+.klassementen-container .klassement-card .button-wrapper>a:hover {
+    background-color: #ffebb3;
+}
+
+.klassementen-container .klassement-card .button-wrapper .value-wrapper {
     display: flex;
     flex-direction: row;
     padding: .3em 1em;
 }
 
-.klassement .button-wrapper .icon-wrapper .text {
+.klassementen-container .klassement-card .button-wrapper .value-wrapper .text {
     text-align: left;
     margin-right: 1vw;
 }
