--- a/style.css
+++ b/style.css
@@ -30,55 +30,12 @@
     justify-content: space-between;
 }
 
-.categorie-table tr th {
-    padding: 9px 24px;
+table.table th,
+table.table td {
+    padding-left: 1rem;
+    padding-right: 1rem;
 }
 
-.categorie-table tr td {
-    padding: 6px 24px;
-}
-
-.info_container {
-    margin-top: 1vw;
-    margin-bottom: 1vw;
-    display: flex;
-    flex-direction: row;
-}
-
-.info_container.bordered {
-    border-width: 1px;
-    border-style: solid;
-    border-radius: 1vw;
-    padding: 1vw;
-}
-
-.info_container.center {
-    align-items: center;
-}
-
-.info_container.top {
-    align-items: flex-start;
-}
-
-
-/* Icon styling */
-
-.info-container .icon-wrapper {
-    margin-right: 1vw;
-}
-
-.info-container .icon-wrapper.small>span {
-    font-size: 18px;
-}
-
-.info-container .icon-wrapper.big>span {
-    font-size: 45px;
-}
-
-.info-container .value-wrapper {
-    display: flex;
-}
-
-.info-container .value-wrapper .icon {
-    margin-right: 1vw;
+table.table td {
+    border-bottom-width: 0px;
 }
