--- a/fonts/custom.css
+++ b/fonts/custom.css
@@ -1,51 +1,51 @@
 @font-face {
-    font-family: 'asrieme';
-    src: url('icomoon/icomoon.eot?h1a6bx');
-    src: url('icomoon/icomoon.eot?h1a6bx#iefix') format( 'embedded-opentype'), url('icomoon/icomoon.ttf?h1a6bx') format( 'truetype'), url('icomoon/icomoon.woff?h1a6bx') format( 'woff'), url('icomoon/icomoon.svg?h1a6bx#icomoon') format( 'svg');
-    font-weight: normal;
-    font-style: normal;
-    font-display: block;
+  font-family: 'icomoon';
+  src:  url('fonts/icomoon.eot?flndxv');
+  src:  url('fonts/icomoon.eot?flndxv#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?flndxv') format('truetype'),
+    url('fonts/icomoon.woff?flndxv') format('woff'),
+    url('fonts/icomoon.svg?flndxv#icomoon') format('svg');
+  font-weight: normal;
+  font-style: normal;
+  font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-    /* use !important to prevent issues with browser extensions that change fonts */
-    font-family: 'asrieme' !important;
-    speak: never;
-    font-style: normal;
-    font-weight: normal;
-    font-variant: normal;
-    text-transform: none;
-    line-height: 1;
-    /* Better Font Rendering =========== */
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
+[class^="icon-"], [class*=" icon-"] {
+  /* use !important to prevent issues with browser extensions that change fonts */
+  font-family: 'icomoon' !important;
+  speak: never;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+
+  /* Better Font Rendering =========== */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-issuu:before {
+  content: "\e901";
+}
 .icon-twizzit:before {
-    content: "\e900";
+  content: "\e900";
 }
-
 .icon-instagram:before {
-    content: "\f16d";
+  content: "\f16d";
 }
-
 .icon-flickr:before {
-    content: "\f16e";
+  content: "\f16e";
 }
-
 .icon-whatsapp:before {
-    content: "\f232";
+  content: "\f232";
 }
-
 .icon-facebook:before {
-    content: "\f39e";
+  content: "\f39e";
 }
-
 .icon-messenger:before {
-    content: "\f39f";
+  content: "\f39f";
 }
-
 .icon-strava:before {
-    content: "\f428";
+  content: "\f428";
 }
