--- a/style/members.css
+++ b/style/members.css
@@ -100,6 +100,7 @@
     flex-direction: row;
     width: 100%;
     font-size: 0.95rem;
+    line-height: 1.4em;
 }
 
 .member-card .info-wrapper .contact-info-container .value-wrapper .value {
