vrijwilligers container toegevoegd voor activiteiten

--- a/style/activiteiten.css
+++ b/style/activiteiten.css
@@ -333,3 +333,8 @@
     color: #041d3d;
     background-color: #ffc72b;
 }
+
+.vrijwilliger-link-container {
+    background-color: #ffebb3;
+    border-radius: 1vw;
+}
